--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.534.0",
+    "motion": "^12.23.12",
     "next": "14.2.30",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
