--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "motion": "^12.23.12",
     "next": "14.2.30",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
     "react": "^18",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18",
