--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -50,15 +50,16 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.534.0",
     "motion": "^12.23.12",
-    "next": "14.2.30",
+    "next": "15.4.1",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
-    "react": "^18",
+    "react": "19.1.1",
     "react-day-picker": "^9.8.1",
-    "react-dom": "^18",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.4",
@@ -72,13 +73,18 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "eslint": "^8",
-    "eslint-config-next": "14.2.30",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8",
+    "supabase": "^2.33.9",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7"
   }
 }
