--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.534.0",
@@ -78,6 +79,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.4.1",
     "postcss": "^8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "supabase": "^2.33.9",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
