--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "react-dom": "19.1.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.4",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.15"
