--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-context-menu": "^2.2.15",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
@@ -39,20 +39,40 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/core": "^3.3.0",
+    "@tiptap/extension-character-count": "^3.3.0",
+    "@tiptap/extension-code-block-lowlight": "^3.3.0",
+    "@tiptap/extension-placeholder": "^3.3.0",
+    "@tiptap/extension-subscript": "^3.3.0",
+    "@tiptap/extension-superscript": "^3.3.0",
+    "@tiptap/extension-table": "^3.3.0",
+    "@tiptap/extension-table-cell": "^3.3.0",
+    "@tiptap/extension-table-header": "^3.3.0",
+    "@tiptap/extension-table-row": "^3.3.0",
+    "@tiptap/extension-task-item": "^3.3.0",
+    "@tiptap/extension-task-list": "^3.3.0",
+    "@tiptap/extension-text-style": "^3.3.0",
+    "@tiptap/extension-typography": "^3.3.0",
+    "@tiptap/pm": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
+    "@tiptap/suggestion": "^3.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "fuse.js": "^7.1.0",
     "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.534.0",
     "motion": "^12.23.12",
     "next": "15.4.1",
@@ -69,6 +89,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tippy.js": "^6.3.7",
     "vaul": "^1.1.2",
     "zod": "^4.0.15"
   },
