--- a/package.json
+++ b/package.json
@@ -45,24 +45,6 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/core": "^3.3.0",
-    "@tiptap/extension-character-count": "^3.3.0",
-    "@tiptap/extension-code-block-lowlight": "^3.3.0",
-    "@tiptap/extension-placeholder": "^3.3.0",
-    "@tiptap/extension-subscript": "^3.3.0",
-    "@tiptap/extension-superscript": "^3.3.0",
-    "@tiptap/extension-table": "^3.3.0",
-    "@tiptap/extension-table-cell": "^3.3.0",
-    "@tiptap/extension-table-header": "^3.3.0",
-    "@tiptap/extension-table-row": "^3.3.0",
-    "@tiptap/extension-task-item": "^3.3.0",
-    "@tiptap/extension-task-list": "^3.3.0",
-    "@tiptap/extension-text-style": "^3.3.0",
-    "@tiptap/extension-typography": "^3.3.0",
-    "@tiptap/pm": "^3.3.0",
-    "@tiptap/react": "^3.3.0",
-    "@tiptap/starter-kit": "^3.3.0",
-    "@tiptap/suggestion": "^3.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -86,6 +68,7 @@
     "react-image-crop": "^11.0.10",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.4",
+    "reactjs-tiptap-editor": "^0.3.22",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
