--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "culori": "^4.0.2",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
@@ -59,6 +60,8 @@
     "motion": "^12.23.12",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.37.7",
+    "qrcode": "^1.5.4",
     "radix-ui": "^1.4.2",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
@@ -72,6 +75,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
     "tippy.js": "^6.3.7",
     "vaul": "^1.1.2",
     "zod": "^4.0.15"
@@ -79,9 +83,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@types/culori": "^4.0.1",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
+    "@types/three": "^0.180.0",
     "eslint": "^8",
     "eslint-config-next": "15.4.1",
     "postcss": "^8",
