--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -45,6 +48,7 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -71,6 +75,7 @@
     "react-image-crop": "^11.0.10",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.4",
+    "react-use-web-share": "^1.0.2",
     "reactjs-tiptap-editor": "^0.3.22",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -82,6 +87,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/culori": "^4.0.1",
     "@types/node": "^20",
