--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/app/(www)/(public)/(legal)/privacy-policy/page.mdx"  ],
   "exclude": [
     "node_modules"
   ]
