--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "postprocessing": "^6.37.7",
     "qrcode": "^1.5.4",
     "radix-ui": "^1.4.2",
+    "razorpay": "^2.9.6",
     "react": "19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
